# AssemblyPractice

./: CMakeLists.txt
src/: main.asm
